--- a/frontend/src/Components/Patient/UserEditProfile.module.css
+++ b/frontend/src/Components/Patient/UserEditProfile.module.css
@@ -5,13 +5,10 @@
       "Source Han Sans CN", sans-serif;
   }
   
-  .main-container {
-    overflow: hidden;
-  }
-  
   .main-container,
   .main-container * {
     box-sizing: border-box;
+    width: 100%;
   }
   
   input,
@@ -23,14 +20,13 @@
   
   .main-container {
     position: relative;
-    width: 1512px;
+    width: 100%;
     height: 982px;
     margin: 0 auto;
     background: #ffffff;
     overflow: hidden;
   }
   
-
   .top-bar {
     display: flex;
     align-items: flex-start;
