--- a/frontend/src/Components/Admin/FacilityHome.module.css
+++ b/frontend/src/Components/Admin/FacilityHome.module.css
@@ -1,184 +1,95 @@
+/* Top Company Header & Side Menu*/
 :root {
-    --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-      "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-      "Source Han Sans CN", sans-serif;
-  }
+  --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
+    "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
+    "Source Han Sans CN", sans-serif;
+}
+
+.main-container, .main-container * {
+  box-sizing: border-box;
+  width: 100%
+}
+
+input, select, textarea, button {
+  outline: 0;
+}
+
+.main-container {
+  position: relative;
+  width: 1512px;
+  height: 982px;
+  margin: 0 auto;
+  background: #ffffff;
+  overflow: hidden;
+}
+
+.top-bar {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  position: relative;
+  background-color:  #e3ebff;
+  width: 1512px;
+  height: 103px;
+  margin: 0 0 0 0;
+}
+
+.frame {
+  flex-shrink: 0;
+  position: relative;
+  width: 1460.894px;
+  height: 103px;
+  z-index: 2;
+  overflow: hidden;
+}
+
+.main-container2 {
+  position: absolute;
+  left: 4%;
+  width: 213.245px;
+  height: 103px;
+  margin: 0 auto;
+}
+
+.company-name-icon {
+  position: relative;
+  width: 213.245px;
+  height: 103px;
+  margin: 0 0 0 0;
+  z-index: 3;
+}
+
+.we-cure-it {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  height: 87.38%;
+  top: 5.83%;
+  left: 0;
+  color: #1a1a1a;
   
-  .main-container {
-    overflow: hidden;
-  }
-  
-  .main-container,
-  .main-container * {
-    box-sizing: border-box;
-  }
-  
-  input,
-  select,
-  textarea,
-  button {
-    outline: 0;
-  }
-  
-  .main-container {
-    position: relative;
-    width: 1512px;
-    height: 982px;
-    margin: 0 auto;
-    background: #ffffff;
-    overflow: hidden;
-  }
-  
-  .top-bar {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    position: relative;
-    background-color:  #e3ebff;
-    width: 1512px;
-    height: 103px;
-    margin: 0 0 0 0;
-  }
-  
-  .frame {
-    flex-shrink: 0;
-    position: relative;
-    width: 1460.894px;
-    height: 103px;
-    z-index: 2;
-    overflow: hidden;
-  }
-  
-  .main-container2 {
-    position: absolute;
-    left: 4%;
-    width: 213.245px;
-    height: 103px;
-    margin: 0 auto;
-  }
-  
-  .company-name-icon {
-    position: absolute;
-    width: 213.245px;
-    height: 103px;
-    top: 0;
-    left: 0;
-    z-index: 3;
-  }
-  .we-cure-it {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    position: absolute;
-    height: 87.38%;
-    top: 5.83%;
-    left: 0;
-    color: #1a1a1a;
-    
-    font-size: 31px;
-    font-weight: 400;
-    line-height: 90px;
-    text-align: left;
-    white-space: nowrap;
-    z-index: 4;
-  }
-  .vector {
-    position: absolute;
-    width: 24.28%;
-    height: 51.53%;
-    top: 24.24%;
-    left: 73.99%;
-    background: url(../../assets/images/Logo.png)
-      no-repeat center;
-    background-size: 100% 100%;
-    z-index: 3;
-  }
-  
-  .create-appointment-button {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    position: absolute;
-    width: 202px;
-    height: 74px;
-    top: 16px;
-    right: 224px;
-    z-index: 10;
-    overflow: hidden;
-    border-radius: 60px;
-  }
-  .create-appointment-btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-    gap: 10px;
-    position: relative;
-    width: 202px;
-    height: 67px;
-    padding: 16px 16px 16px 16px;
-    cursor: pointer;
-    background: #ffbfab;
-    border: none;
-    z-index: 11;
-    overflow: hidden;
-    border-radius: 60px;
-  }
-  .frame-1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-    gap: 9px;
-    position: relative;
-    width: 154px;
-    z-index: 12;
-  }
-  .create-new-appointment {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-shrink: 0;
-    flex-basis: auto;
-    position: relative;
-    width: 154px;
-    height: 26px;
-    color: #1a1a1a;
-    
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: right;
-    white-space: nowrap;
-    z-index: 13;
-  }
-  .profile {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 31px;
-    left: 1355.894px;
-    z-index: 8;
-    border-radius: 500px;
-  }
-  .unsplash-ctagwpbqg {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    top: 0;
-    left: 0;
-    background: url(../../assets/images/profile.png)
-      no-repeat center;
-    background-size: cover;
-    z-index: 9;
-    border-radius: 500px;
-  }
+  font-size: 31px;
+  font-weight: 400;
+  line-height: 90px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 4;
+}
+
+.vector {
+  position: absolute;
+  width: 24.28%;
+  height: 51.53%;
+  top: 24.24%;
+  left: 73.99%;
+  background: url(../../assets/images/Logo.png)
+    no-repeat center;
+  background-size: 100% 100%;
+  z-index: 3;
+}
   
   .rectangle {
     position: relative;
@@ -241,14 +152,14 @@
   }
   .edit {
     position: absolute;
-    width: 40.865px;
-    height: 36.783px;
-    top: 241px;
-    left: 43px;
-    /* background: url(../assets/images/76b62927-b376-4971-a9a2-6720a8f9937e.png)
-      no-repeat center; */
+    width: 45.861px;
+    height: 34.767px;
+    top: 244px;
+    left: 38px;
+    background: url(../../assets/images/4bc38fe6-9a0d-4721-b9b5-840e787b8d09.png)
+    no-repeat center;
     background-size: cover;
-    z-index: 11;
+    z-index: 80;
     overflow: hidden;
   }
   .full-table {
@@ -3175,4 +3086,17 @@
 .container-for-no-facilities {
   position: relative;
   /* ... other styles ... */
+}
+
+.edit-29 {
+  position: absolute;
+  width: 40.865px;
+  height: 36.783px;
+  top: 307.058px;
+  left: 43px;
+  background: url(../../assets/images/674d49b6-c979-4103-a52e-ce84853463fb.png)
+    no-repeat center;
+  background-size: cover;
+  z-index: 84;
+  overflow: hidden;
 }
