--- a/frontend/src/Components/Patient/UserHomePage.module.css
+++ b/frontend/src/Components/Patient/UserHomePage.module.css
@@ -205,7 +205,7 @@ button {
   height: 237px;
   margin: 18px 0 0 84px;
   z-index: 77;
-  overflow: hidden;
+  overflow: auto;
 }
 .table {
   display: flex;
