--- a/frontend/src/Components/Patient/UserHomePage.module.css
+++ b/frontend/src/Components/Patient/UserHomePage.module.css
@@ -1173,59 +1173,6 @@ button {
   white-space: nowrap;
   z-index: 70;
 }
-.form {
-  display: flex;
-  align-items: center;
-  align-self: stretch;
-  flex-wrap: nowrap;
-  flex-shrink: 0;
-  gap: 8px;
-  position: relative;
-  min-width: 0;
-  height: 52px;
-  padding: 0 12px 0 12px;
-  background: #ffffff;
-  border: 1px solid #9d9d9d;
-  z-index: 71;
-  border-radius: 8px;
-}
-.text-wrap {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 0;
-  gap: 10px;
-  position: relative;
-  z-index: 72;
-  overflow: hidden;
-}
-.selected-option {
-  flex-shrink: 0;
-  flex-basis: auto;
-  position: relative;
-  height: 19px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 19px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 73;
-}
-.keyboard-arrow-down {
-  flex-shrink: 0;
-  position: relative;
-  width: 24px;
-  height: 24px;
-  background: url(../../assets/arrowdown.svg)
-    no-repeat center;
-  background-size: cover;
-  z-index: 74;
-  overflow: hidden;
-}
 .upcoming-appointment-table-35 {
   display: flex;
   flex-direction: column;
@@ -1918,4 +1865,23 @@ button {
   font-family: 'FontAwesome';
   content: '\f007'; 
   margin-right: 8px;
+}
+
+.date-input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 16px;
+  color: #333;
+  background-color: white;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  
+}
+
+.noAppointments {
+  font-weight: bold;
+  text-align: center;
+  left: 500%;
 }
