--- a/frontend/src/Components/Doctor/DoctorHomePage.css
+++ b/frontend/src/Components/Doctor/DoctorHomePage.css
@@ -1,30 +1,92 @@
+/* Top Company Header & Side Menu*/
 :root {
-    --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
     "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
     "Source Han Sans CN", sans-serif;
-    }
-    .main-container {
-    overflow: hidden;
-    }
-    .main-container,
-    .main-container * {
-    box-sizing: border-box;
-    }
-    input,
-    select,
-    textarea,
-    button {
-    outline: 0;
-    }
-    .main-container {
-    position: relative;
-    width: 100%;
-    height: 982px;
-    margin: 0 auto;
-    background: #ffffff;
-    overflow: hidden;
-    }
+}
+.main-container, .main-container * {
+  box-sizing: border-box;
+}
+input, select, textarea, button {
+  outline: 0;
+}
+
+.main-container {
+  position: relative;
+  width: 1512px;
+  height: 982px;
+  margin: 0 auto;
+  background: #ffffff;
+  overflow: hidden;
+}
+
+.top-bar {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  position: relative;
+  background-color:  #e3ebff;
+  width: 1512px;
+  height: 103px;
+  margin: 0 0 0 0;
+}
+
+.frame {
+  flex-shrink: 0;
+  position: relative;
+  width: 1460.894px;
+  height: 103px;
+  z-index: 2;
+  overflow: hidden;
+}
+
+.main-container3 {
+  position: absolute;
+  left: 4%;
+  width: 213.245px;
+  height: 103px;
+  margin: 0 auto;
+}
+
+.company-name-icon {
+  position: relative;
+  width: 213.245px;
+  height: 103px;
+  margin: 0 0 0 0;
+  z-index: 3;
+}
+
+.we-cure-it {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  height: 87.38%;
+  top: 5.83%;
+  left: 0;
+  color: #1a1a1a;
+  
+  font-size: 31px;
+  font-weight: 400;
+  line-height: 90px;
+  text-align: left;
+  white-space: nowrap;
+  z-index: 4;
+}
+
+.vector {
+  position: absolute;
+  width: 24.28%;
+  height: 51.53%;
+  top: 24.24%;
+  left: 73.99%;
+  background: url(../../assets/images/Logo.png)
+    no-repeat center;
+  background-size: 100% 100%;
+  z-index: 3;
+}
     .main-container1 {
         position: relative;
         float: left;
@@ -43,17 +105,6 @@
             background: #ffffff;
             overflow: hidden;
             }
-    .topBar{
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        flex-wrap: nowrap;
-        position: relative;
-        background-color:  #c0cef1;
-        width: 100%;
-        height: 103px;
-        margin: 0 0 0 0;
-    }
     .text-1{
         position: relative;
         width: 40%px;
