--- a/frontend/src/Components/Admin/FacilityHome.module.css
+++ b/frontend/src/Components/Admin/FacilityHome.module.css
@@ -3120,3 +3120,49 @@ input, select, textarea, button {
   white-space: nowrap;
   z-index: 82;
 }
+.profile {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 31px;
+  left: 1355.894px;
+  z-index: 8;
+  border-radius: 500px;
+  overflow: visible;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 100;
+  right: 0; 
+  top: 100%;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  visibility: visible; 
+  opacity: 1; 
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn::before {
+  font-family: 'FontAwesome';
+  content: '\f007'; 
+  margin-right: 8px;
+}
