--- a/frontend/src/Components/Patient/UserAppointment.module.css
+++ b/frontend/src/Components/Patient/UserAppointment.module.css
@@ -39,6 +39,7 @@ button {
   width: 1512px;
   height: 103px;
   margin: 0 0 0 0;
+  overflow: visible;
 }
 
 .frame {
@@ -47,7 +48,7 @@ button {
   width: 1460.894px;
   height: 103px;
   z-index: 2;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .main-container2 {
@@ -83,18 +84,61 @@ button {
   white-space: nowrap;
   z-index: 4;
 }
-.vector-cross {
+.vector99 {
   position: absolute;
   width: 24.28%;
   height: 51.53%;
   top: 24.24%;
   left: 73.99%;
-  /* background: url(../../assets/images/Logo.png)
-    no-repeat center; */
+  background: url(../../assets/images/Logo.png)
+    no-repeat center;
   background-size: 100% 100%;
   z-index: 3;
 }
-
+.create-appointment-button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  position: absolute;
+  width: 202px;
+  height: 74px;
+  top: 16px;
+  right: 224px;
+  z-index: 10;
+  overflow: hidden;
+  border-radius: 60px;
+}
+.create-appointment-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  gap: 10px;
+  position: relative;
+  width: 150px;
+  height: 67px;
+  padding: 16px 16px 16px 16px;
+  cursor: pointer;
+  background: #ffbfab;
+  border: none;
+  z-index: 11;
+  overflow: hidden;
+  border-radius: 60px;
+}
+.frame-1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  gap: 9px;
+  position: relative;
+  width: 154px;
+  z-index: 12;
+}
 .schedule-appointment {
   display: block;
   position: relative;
