--- a/frontend/src/Components/Doctor/ViewAppointment.module.css
+++ b/frontend/src/Components/Doctor/ViewAppointment.module.css
@@ -1,113 +1,138 @@
 :root {
   --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-    "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-    "Source Han Sans CN", sans-serif;
-}
-
-.main-container {
+  Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
+  "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
+  "Source Han Sans CN", sans-serif;
+  }
+  .main-container {
   overflow: hidden;
-}
-
-.main-container,
-.main-container * {
+  }
+  .main-container,
+  .main-container * {
   box-sizing: border-box;
-}
-
-input,
-select,
-textarea,
-button {
+  }
+  input,
+  select,
+  textarea,
+  button {
   outline: 0;
-}
-
-.main-container {
+  }
+  .main-container {
   position: relative;
-  width: 1512px;
+  width: 100%;
   height: 982px;
   margin: 0 auto;
   background: #ffffff;
   overflow: hidden;
-}
-.top-bar {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  position: relative;
-  width: 1512px;
-  height: 103px;
-  margin: 0 0 0 0;
-  background: #e3ebff;
-}
-.top-bar-background {
-  flex-shrink: 0;
-  position: relative;
-  width: 1512px;
-  height: 103px;
-  background: #e3ebff;
-  z-index: 108;
-  border-radius: 16px 16px 0 0;
-}
-.frame {
-  flex-shrink: 0;
-  position: relative;
-  width: 1460.894px;
-  height: 103px;
-  z-index: 2;
-  overflow: hidden;
-}
-.company-name-icon {
-  position: absolute;
-  width: 213.245px;
-  height: 103px;
-  top: 0;
-  left: 0;
-  z-index: 3;
-}
-.we-cure-it {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  position: absolute;
-  height: 87.38%;
-  top: 5.83%;
-  left: 0;
-  color: #1a1a1a;
-  
-  font-size: 31px;
-  font-weight: 400;
-  line-height: 90px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 4;
-}
-.medical-cross {
-  position: absolute;
-  width: 27.75%;
-  height: 58.89%;
-  top: 20.56%;
-  left: 72.25%;
-  z-index: 5;
-}
-.group {
-  position: relative;
-  width: 51.776px;
-  height: 53.074px;
-  margin: 3.791px 0 0 3.698px;
-  z-index: 6;
-}
-.vector {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: url(../../assets/images/3424dc3b-0b04-4d4e-9dc7-b7ec37c61138.png)
-    no-repeat center;
-  background-size: 100% 100%;
-  z-index: 7;
-}
+  }
+  .topBar{
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      flex-wrap: nowrap;
+      position: relative;
+      background-color:  #c0cef1;
+      width: 100%;
+      height: 103px;
+      margin: 0 0 0 0;
+  }
+  .logo{
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 24.24%;
+      left:14%;
+      background-size: 100% 100%;
+      z-index: 3;
+    }
+    .logoTitle{
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      position: absolute;
+      height: 87.38%;
+      top: 5.83%;
+      left: 0;
+      color: #1a1a1a;
+      font-family: 'Times New Roman', Times, serif, var(--default-font-family);
+      font-size: 31px;
+      font-weight: 400;
+      line-height: 90px;
+      text-align: left;
+      margin-left: 30px;
+      white-space: nowrap;
+    }
+    .tab1{
+      position: relative;
+      justify-content: center;
+      height: 103px;
+      margin-left: 450px;
+      border-width: 0px;
+      background-color: #c0cef1;
+    }
+    .tab1:hover{
+      position: relative;
+      justify-content: center;
+      height: 103px;
+      margin-left: 450px;
+      background-color: #E7E7FF;
+      border-width: 0px 0px 10px 0px;
+      border-color: #8080ea;
+    }
+    .tab2{
+      position: relative;
+      justify-content: center;
+      height: 103px;
+      margin-left: 300px;
+      border-width: 0px;
+      background-color: #c0cef1;
+    }
+    .tab2:hover{
+      position: relative;
+      justify-content: center;
+      height: 103px;
+      margin-left: 300px;
+      background-color: #E7E7FF;
+      border-width: 0px 0px 10px 0px;
+      border-color: #8080ea;
+    }
+    .tab1{
+      justify-content: center;
+      position: relative;
+      color: #1a1a1a;
+      font-family: Noto Sans, var(--default-font-family);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: center;
+      white-space: nowrap;
+    }
+    .tab2{
+      justify-content: center;
+      position: relative;
+      color: #1a1a1a;
+      font-family: Noto Sans, var(--default-font-family);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: center;
+      white-space: nowrap;
+    }
+    .profilepic{
+      position: relative;
+      width: 50px;
+      height: 50px;
+    }
+    .profile{
+      position: relative;
+      height: 50px;
+      width: 50px;
+      border-radius: 30px;
+      margin-right: 40px;
+      margin-top: 20px;
+      border-width: 0px;
+      background-color: #c0cef1;
+    }
 .profile {
   position: absolute;
   width: 40px;
@@ -129,7 +154,7 @@ button {
   z-index: 9;
   border-radius: 500px;
 }
-.tabs {
+/* .tabs {
   position: absolute;
   width: 456.792px;
   height: 41.667px;
@@ -137,7 +162,7 @@ button {
   left: 50%;
   transform: translate(-42.11%, 0);
   z-index: 10;
-}
+} */
 .view-add-schedule {
   display: flex;
   align-items: flex-start;
@@ -964,5 +989,3 @@ button {
   background-size: 100% 100%;
   z-index: 3;
 }
-
-
