--- a/frontend/src/Components/Patient/UserAppointment.module.css
+++ b/frontend/src/Components/Patient/UserAppointment.module.css
@@ -3208,3 +3208,42 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     margin-right: 8px;
   }
   
+.noApp1 {
+  display: flex;
+  align-items: flex-start;
+  align-self: stretch;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  position: relative;
+  height: 98px;
+  z-index: 48;
+  overflow: hidden;
+}
+
+.noApp2 {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0;
+  position: relative;
+  height: 64px;
+  z-index: 49;
+}
+
+.noApp3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 0;
+  gap: 8px;
+  position: relative;
+  height: 98px;
+  padding: 0 12px 0 12px;
+  z-index: 50;
+  overflow: hidden;
+}
